# auth-service

./: .gitignore  README.md  create_admin.py  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 1140f6badfce_tables_created.py
auth_app/: main.py
auth_app/api/api_v1/: __init__.py
auth_app/api/api_v1/auth/: helpers.py  views.py
auth_app/api/api_v1/users/: crud.py  schemas.py  views.py
auth_app/core/: config.py
auth_app/core/models/: __init__.py  db_helper.py  service.py  user.py  user_role.py
